# peaq-network-charmev

./: .gitignore  OWNERS  README.md  build.sh  pubspec.yaml  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: delete-draft-release.yaml  draft.yaml  feature-bug.yaml  flutter.yaml  release.yaml
.lighthouse/jenkins-x/: devbranch.yaml  pullrequest.yaml  release.yaml  triggers.yaml
android/: .gitignore  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/charmev/: MainActivity.kt
android/app/src/main/kotlin/network/peaq/charmev/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: assets.dart  keys.dart  main.dart  theme.dart
lib/common/models/: account.dart  account.g.dart  detail.dart  enum.dart  rust_data.dart  rust_data.g.dart  station.dart  station.g.dart  transaction.dart  transaction.g.dart  tx_info.dart  tx_info.g.dart
lib/common/providers/: account_provider.dart  application_provider.dart  charge_provider.dart  peer_provider.dart  providers_wrapper.dart  service_provider.dart
lib/common/services/db/: constant.dart  database.dart  transactions.dart
lib/common/services/fr_bridge/: bridge_generated.dart
lib/common/utils/: logger.dart  pref_storage.dart  validation.dart
lib/common/widgets/: border_box.dart  bottom_sheet.dart  buttons.dart  countdown.dart  custom_shapes.dart  dialog.dart  dropdown.dart  keyboard_padding.dart  loading.dart  loading_view.dart  progress_card.dart  route.dart  service_container.dart  status_card.dart  textfield.dart
lib/config/: app.dart  env.dart  navigator.dart  route_handlers.dart  routes.dart  service_locator.dart
lib/screens/: account.dart  charging_session.dart  entry.dart  event_explorer.dart  home.dart  onboarding.dart  provider_detail.dart
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/src/: api.rs  behaviour.rs  bridge_generated.rs  chain.rs  lib.rs  request.rs  utils.rs
rust/src/p2p/: behaviour.rs  event.rs  mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
