[package]
name = "peaq-codec-api"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
	".",
]

[lib]
name = "peaq_codec_api"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
flutter_rust_bridge = { version = "1.23.0" }
log = "0.4.14"
async-trait = "0.1.52"
android_logger = "0.10"
env_logger = "0.9"
protobuf = "3.0.0-alpha.8"
once_cell = "1.10.0"

libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
futures = "0.3.1"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
peaq-p2p-proto-message = { git = "https://github.com/peaqnetwork/peaq-network-ev-charging-message-format.git", branch = "dev" }