[package]
name = "peaq-codec-api"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
	".",
]

[lib]
name = "peaq_codec_api"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
flutter_rust_bridge = { version = "1.23.0" }
log = "0.4.14"
async-trait = "0.1.52"
android_logger = "0.10"
env_logger = "0.9"
hex = "0.4.3"
rand = "0.8"
protobuf = "3.0.0-alpha.8"
once_cell = "1.10.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0"}
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-keyring" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
futures = "0.3.1"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
peaq-p2p-proto-message = { git = "https://github.com/peaqnetwork/peaq-network-ev-charging-message-format.git", rev = "82829f54886e560cbc6686c4c3c1f063efcd72ac" }

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.frame-metadata] 
version = "14.0.0"
git = "https://github.com/paritytech/frame-metadata.git" 
branch = "main"
features = ["v14"] 

[dependencies.substrate-api-client] 
version = "0.6.0"
git = "https://github.com/irediaes/substrate-api-client.git"
rev = "66fa708d3f94748c59ef1e6c81deb34eddea59c2"


[features]
default = ["std"]
std = [
    "substrate-api-client/std",
	"codec/std",
	"serde/std",
	"frame-metadata/std",
    'sp-core/std',
    "scale-info/std",
	"sp-runtime/std",
]