[package]
name = "peaq-codec-api"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
	".",
]

[lib]
name = "peaq_codec_api"
crate-type = ["cdylib"]

[patch.crates-io]
ethereum = { git = "https://github.com/peaqnetwork/ethereum", branch = "tgm-0.11.1-typeinfo-patch" }


[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
flutter_rust_bridge = { version = "1.23.0" }
log = "0.4.14"
async-trait = "0.1.52"
android_logger = "0.10"
env_logger = "0.9"
hex = "0.4.3"
rand = "0.8"
protobuf = "3.0.0-alpha.8"
once_cell = "1.10.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0"}

codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
keyring = { version = "4.1.0-dev", package = "sp-keyring", git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.16" }
sp-runtime = { version = "4.1.0-dev", default-features = false, git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.16" }

libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
futures = "0.3.1"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }

peaq-node-runtime = { version = "3.0.0-polkadot-v0.9.16", git = "https://github.com/peaqnetwork/peaq-network-node", rev = "4fa456a20e2e60d433b1e37dcbd7775f02c97602" }
peaq-p2p-proto-message = { git = "https://github.com/peaqnetwork/peaq-network-ev-charging-message-format.git", rev = "8632fb0395125a8b155cbefb8d5e634a9b6e780b" }

[dependencies.sp-core]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = "peaq-polkadot-v0.9.16"
version = '4.1.0-dev'

[dependencies.pallet-multisig]
default-features = false
#path = "../substrate/frame/multisig"
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.16'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.frame-metadata] 
version = "14.2.0"
features = ["v14"] 

[dependencies.substrate-api-client] 
version = "0.6.0"
git = "https://github.com/irediaes/substrate-api-client.git"
rev = "93d8d67296f0c55096ebf33d09f96b2e5a345d2f"


[features]
default = ["std"]
std = [
    "substrate-api-client/std",
	"codec/std",
	"serde/std",
	"frame-metadata/std",
    'sp-core/std',
    "scale-info/std",
	"sp-runtime/std",
    "pallet-multisig/std",
    "peaq-node-runtime/std",
]